replaced email with name

--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Portfolio-f024ec62-cb01-44df-a40d-c0dfc162f17f</UserSecretsId>
   </PropertyGroup>
